# 2D-physics

./: .gitignore  .gitmodules  README.md  cuda_sim_step.cu
.github/workflows/: build-and-release.yml  release.yml
ProjectSource/: CMakeLists.txt  example-config.json  main.cu
ProjectSource/App/: CMakeLists.txt
ProjectSource/App/ConfigParser/: ConfigParser.cpp  ConfigParser.hpp
ProjectSource/CUDAModules/: CMakeLists.txt  README.md  main.cu
ProjectSource/CUDAModules/CUDADraw/: CUDADraw.cu  CUDADraw.cuh
ProjectSource/CUDAModules/CUDAFacade/: CUDAFacade.cu  CUDAFacade.cuh
ProjectSource/CUDAModules/CUDAGrid/: CUDAGrid.cu  CUDAGrid.cuh
ProjectSource/CUDAModules/Obstacles/: Obstacles.cu  Obstacles.cuh  ObstaclesFactory.cu  ObstaclesFactory.cuh
ProjectSource/LBMModule/include/: LBMModule.hpp
ProjectSource/SFMLVisualizer/include/: Visualizer.hpp
ProjectSource/UpdateLoader/: CMakeLists.txt  UpdateLoader.cpp  UpdateLoader.hpp
ProjectSource/UpdateLoader/scripts/: update.sh
alpha-version/: CMakeLists.txt  readme.txt
alpha-version/include/: visualize.hpp
alpha-version/src/: main.cpp
cmake-sfml-project/: readme.txt
cmake-sfml-project/include/: visualize.hpp
cmake-sfml-project/src/: main.cpp  visualize.cpp
cuda-version/: CMakeLists.txt  readme.txt
cuda-version/CUDADraw/: CUDADraw.cu  CUDADraw.cuh
cuda-version/CUDAGrid/: CUDAGrid.cu  CUDAGrid.cuh  cuda_sim_step.cu
cuda-version/src/: main.cu
version alpha/src/: main.cpp  visualize.cpp
